unpackaged/objects/wb_CountryDistrict__c.object
<CustomObject>
    <description>WellBe Country District Mapping</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>所属</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <label>代理</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <label>国コード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>国</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>地区</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <label>管轄</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>地域</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>サービス</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>国地区</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>